2003-02-19  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-18  Ross Burton  <ross@burtonini.com>

	* src/dh-parser.c (parser_end_node_cb): Reverse the nodes which
	were backwards, as they were appended for speed.

	* src/dh-base.c (base_init_books): Look in
	/usr/share/gtk-doc/html/ and ~/.devhelp2/books/ for books.

2003-02-17  Ross Burton  <ross@burtonini.com>	

	* src/dh-base.c (base_init_books): Search DEVHELP_SEARCH_PATH for
	books.

	* src/dh-html-gtkhtml2.c (html_reader_thread): Return NULLs.

	* src/dh-main.c: Remove unused variables and add more includes.

	* src/dh-base.c: Ditto.

	* src/dh-base.h: Rename a method so it matches the implementation.

2003-02-15  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-window.c:
	- Fixed a number of compile warnings.
	(window_activate_action): 
	- actually do something when forward/back are pressed.

	* configure.in: added warnings

	* src/dh-search.c (search_filter_idle): 
	- Emit link selected if exact match was returned form keyword
	  model.

	* src/dh-keyword-model.c (dh_keyword_model_filter): 
	- Return Link if exact hit (one item in hit list).

	* src/dh-window.c: 
	- updated to changes when DhHtml is no longer a subclass of
	  HtmlView.

	* src/dh-html-mozilla.c: 
	- added
	- used when compiled with --with-html-widget=mozilla

	* src/dh-html-gtkhtml2.c: 
	- The old dh-html.c
	- Don't subclass HtmlView
	- Added dh_html_get_widget
	- This is used if not compiled with --with-html-widget=mozilla

	* configure.in: added support to compile
	  --with-html-widget=mozilla (works great with this!)

	* src/dh-search.c (search_entry_key_press_event_cb): 
	- Added, don't move focus when hitting tab in search entry.
	- Move to hit list when Ctrl+tab.

2003-02-13  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-book-tree.c (book_tree_insert_node): speeeeeeeeeeedup!

	* src/dh-parser.[ch]: Added, new GMarkup-based parser.

	* src/dh-book.[ch]: